@@ -1,5 +1,0 @@
-AC_INIT(configure.in)
-CONFIG_RULES
-AC_PROG_AWK
-AC_PROG_INSTALL
-V5_AC_OUTPUT_MAKEFILE
