@@ -1,5 +1,12 @@
 1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
+	* Makefile.in: Set the myfulldir and mydir variables (which are
+		relative to buildtop and thisconfigdir, respectively.)
+		Add a MY_SUBDIRS macro set to '.' to indicate that there
+		are no subdirectories to be processed by the Makefile.
+
+	* configure.in: Removed and tests moved to parent directory.
+
 	* krb.h: Add a declaration for the global variable
 		krb5__krb4_context, which is used by the krb4 routines
 		that need to call krb5 library routines.
